--- a/vignettes/ChineseVersion_Procedure.Rmd
+++ b/vignettes/ChineseVersion_Procedure.Rmd
@@ -26,14 +26,14 @@ library(emr)
 供後續 ICD 格式轉換的功能使用 (`IcdPrDecimaltoShort 和 IcdPrShortToDecimal`) 
 
 ICD-9-PCS
-```
+```r
 icd9_Short <- head(ICD9PrwithTwoFormat$Short,10)
 # c("0001", "0002", "0003", "0009", "0010", "0011", "0012", "0013", "0014", "0015")
 icd9_Decimal <- head(ICD9PrwithTwoFormat$Decimal, 10)
 # c("00.01", "00.02", "00.03", "00.09", "00.10", "00.11", "00.12", "00.13", "00.14", "00.15")
 ```
 ICD-10-PCS只有short的格式
-```
+```r
 icd10 <- head(prICD10$ICD,10)
 # c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076", "0016077", "0016078", "001607B", "00160J0")
 ```
@@ -44,7 +44,7 @@ ICD-9-PCS 兩種格式的轉換: Short <-> Decimal
 進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式
 
 將 ICD-PCS code 的格式統一轉成 Decimal
-```
+```r
 # ICD-9
 ICD9_Decimal <- IcdPrShortToDecimal(icd9_Short)
 ICD9$Decimal
@@ -56,7 +56,7 @@ ICD10$Decimal
 # c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076", "0016077", "0016078", "001607B", "00160J0")
 ```
 將 ICD-PCS code 的格式統一轉成 Short
-```
+```r
 # ICD-9
 ICD9_Short <- IcdPrDecimalToShort(icd9_Decimal)
 ICD9_Short$Short
@@ -86,15 +86,16 @@ ICD10_Short$Short
 `IcdPrToCCS` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類(CCS Category)及分類之敘述
 
 ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致: 共231種
-```
+```r
 ## ICD to CCS category
-IcdPrToCCS (PrDataFile, ID, ICD, Date, "2016-01-01", FALSE)
-#  "1"   "180" "1"   "1"
-
-## ICD to CCS description
-IcdPrToCCS (PrDataFile, ID, ICD, Date, "2016-01-01", TRUE)
-# "Incision and excision of CNS"             "Other CT scan"                
-# "Incision and excision of CNS"             "Incision and excision of CNS"
+CCS <- IcdPrToCCS(PrDataFile, ID, ICD, Date, "2015-10-01", TRUE)
+#> head(CCS$groupedDT, 5)
+#>        Short ID     ICD       Date                              CCS_CATEGORY_DESCRIPTION
+#>   1:    5681  B    5681 2008-01-14      Other OR therapeutic procedures of urinary tract
+#>   2:    9774  A    9774 2009-01-11    Other non-OR therapeutic procedures; female organs
+#>   3:    4499  B   44.99 2009-05-10              Other OR upper GI therapeutic procedures
+#>   4:    0759  C   07.59 2009-01-21                      Therapeutic endocrine procedures
+#>   5:    0205  B    0205 2008-07-06        Other OR therapeutic nervous system procedures
 ```
 ####2) 多階層分類
 `IcdPrToCCSLvl` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類 (Multiple ccs level)及分類之敘述
@@ -102,15 +103,16 @@ IcdPrToCCS (PrDataFile, ID, ICD, Date, "2016-01-01", TRUE)
 ICD-9-PCS 共 3個階層 (Level 1~3)
 
 ICD-10-PCS 共 2個階層 (Level 1~2)
-```
-## ICD to CCS multiple level 1
-IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, "2016-01-01", 2, FALSE)
-# "1.1"  "16.2" "1.1"  "1.1"
-
+```r
 ## ICD to CCS multiple level 2
-IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, "2016-01-01", 2, TRUE)
-#  "Incision  excision of CNS"               "Computerized axial tomography (CT) scan"
-#  "Incision  excision of CNS"               "Incision  excision of CNS"    
+CCSLvl <- IcdPrToCCSLvl(samplePrFile, ID, ICD, Date, "2015-10-01", 2, TRUE)
+head(CCSLvl$groupedDT, 5)
+#>        Short ID     ICD       Date                                       CCS_LVL_2_LABEL
+#>   1:    5681  B    5681 2008-01-14      Other OR therapeutic procedures of urinary tract
+#>   2:    9774  A    9774 2009-01-11    Other non-OR therapeutic procedures; female organs
+#>   3:    4499  B   44.99 2009-05-10              Other OR upper GI therapeutic procedures
+#>   4:    0759  C   07.59 2009-01-21                Other therapeutic endocrine procedures
+#>   5:    0205  B    0205 2008-07-06        Other OR therapeutic nervous system procedures
 ```
 ### 二、Procedure Class 
 由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes, 將檢查與處置碼基於其特性分組, 共ICD-PCS code分為下列四個組別:
@@ -122,9 +124,15 @@ IcdPrToCCSLvl(PrDataFile, ID, ICD, Date, "2016-01-01", 2, TRUE)
 3.Major Diagnostic: 需在手術室執行之診斷類處置
 
 4.Major Therapeutic: 需在手術室執行之治療類處置
-```
-IcdPrToProcedureClass(PrDataFile, ID, ICD, Date, "2016-01-01", TRUE)
-# "2" "1" "4" "4"
+```r
+ProcedureClass <- IcdPrToProcedureClass(samplePrFile, ID, ICD, Date, "2015-10-01", TRUE)
+head(ProcedureClass$groupedDT, 5)
+#>        Short ID     ICD       Date PROCEDURE_CLASS
+#>   1:    5681  B    5681 2008-01-14               4
+#>   2:    9774  A    9774 2009-01-11               2
+#>   3:    4499  B   44.99 2009-05-10               4
+#>   4:    0759  C   07.59 2009-01-21               4
+#>   5:    0205  B    0205 2008-07-06               4
 ```
 
 ## III. Reference
