--- a/vignettes/emr.Rmd
+++ b/vignettes/emr.Rmd
@@ -13,6 +13,7 @@ cat(utils::packageDescription("emr")$Description)
 ```
 ### Install
 ```r
+install.packages("devtools")
 # Install development version from GitHub
 devtools::install_github("DHLab-CGU/emr")
 library(emr)
